@@ -20,8 +20,8 @@ Everywhere:
 	Disable X-closing for all windows and dialogs except for main window
 		(necessary to ensure progress dialogs cannot be closed).
 *	Allow customisation of types in drop-down boxes
-*	Read *.opt from home directory instead of current directory.
-*	Handle missing runtime.opt.
+*	New launcher program/script for windows
+*	Handle missing runtime.opt
 
 File I/O:
 	Import brings up file dialog first.
@@ -36,6 +36,7 @@ JPython:
 	Check to see whether user libraries are text files
 	Syntax highlighting for script editor
 	Import/export scripts as text files
+*	Convert JPython to Jython in GUI strings
 
 Main Window:
 	View file version.
