@@ -15,7 +15,7 @@
 </center>
 <p>
 <a name="contents"><i>Website last updated 10 June 2001</i></a>
-<a href="http://sourceforge.net/projects/btools/"><img
+<a href="http://sourceforge.net/projects/regina/"><img
 	src="http://sourceforge.net/sflogo.php?group_id=19698&type=1"
 	alt="SourceForge" align="right" hspace=5 border=0></a>
 <ul>
@@ -23,10 +23,13 @@
 	<li><a href="#whatdoes">What does Regina do?</a></li>
 	<li><a href="#screenshots">Screenshots</a></li>
 	<li><a href="sysreq.html">System Requirements</a>
-		<i>(separate page)</i>
+		<i>(separate pages)</i>
 		<ul>
 			<li><a href="sysreq.html#linux">Linux</a></li>
-			<li><a href="sysreq.html#windoze">Windows</a></li>
+			<li><a href="sysreq.html#windoze">Windows</a>
+			<ul>
+				<li><a href="cygwin.html">Cygwin Support</a></li>
+			</ul></li>
 		</ul></li>
 	<li><a href="#license">License</a></li>
 	<li><a href="#download">Download</a></li>
