@@ -18,5 +18,6 @@
   <item url="return.gif" />
   <item url="title.jpg" />
   <item url="sysreq.html" />
+  <item url="cygwin.html" />
  </project>
 </webproject>
