@@ -2,6 +2,7 @@
 Regina - A Normal Surface Theory Calculator
 
     OVERALL:
+        - Builds and runs under windows!
         - Tightened up runtime scripts.
         - Tidied up Makefiles and CVS.
     ENGINE:
